# Engine_AID

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  CONTROL_QUESTIONS.md  REPORT_NOTES.md  REPORT_PZ1_Imanakov_VP_J3300.docx  REPORT_PZ1_Imanakov_VP_J3300.md  REPOSITORY_CONTENT.md
src/: main.cpp
src/core/: Application.cpp  Application.h  GameState.h  Logger.cpp  Logger.h  States.cpp  States.h
src/game/: InputController.cpp  InputController.h
src/render/: IRenderAdapter.h  RaylibRenderAdapter.cpp  RaylibRenderAdapter.h
